<resources>
    <string name="app_name">MyCars</string>
    <string name="car_item_car_image">car item car image</string>
    <string name="car_item_icon_attention">car item icon attention</string>
    <string name="part_item_icon">part item icon</string>
    <string name="note_item_image">note item level</string>
    <string name="part_item_image">part photo</string>
    <string name="no_cars_please_add">you have no one car.</string>
    <string name="main_car_image">main car Image</string>
    <string name="parts">parts</string>
    <string name="notes">notes</string>
    <string name="repairs">repairs</string>
    <string name="create_new">new</string>
    <string name="input_brand">input brand</string>
    <string name="input_model">input model</string>
    <string name="input_number">1234 FF-6</string>
    <string name="input_vin_code">input VIN code</string>
    <string name="input_year_of_made">input year</string>
    <string name="input_mileage">input mileage</string>
    <string name="create">create</string>
    <string name="update">update</string>
    <string name="delete_car">remove</string>
    <string name="cancel">back</string>
    <string name="input_description_if_you_need_it">description</string>
    <string name="done">done</string>
    <string name="input_name">input name</string>
    <string name="input_code">input codes</string>
    <string name="input_mileage_of_last_change">last chnge mileage</string>
    <string name="settings">set</string>
    <string name="name_part">name part</string>
    <string name="but_service">SERVICE</string>
    <string name="part_to_change">To change:</string>
    <string name="part_to_change_with_result">To change: %s</string>
    <string name="part_installed_at">Installed at:</string>
    <string name="part_codes_and_crossing_codes">Codes and Crossing codes:</string>
    <string name="codes_for_part">codes for part</string>
    <string name="part_description">Description:</string>
    <string name="part_hint_description_of_part">description of part</string>
    <string name="but_notes">notes</string>
    <string name="delete">delete</string>
    <string name="removing_obj">Removing object</string>
    <string name="back">back</string>
    <string name="service">service</string>
    <string name="no_elements">you have no one element, please add</string>
    <string name="save">save</string>
    <string name="attention_before_buy_days">attention before buy, days</string>
    <string name="attention_before_buy_km">attention before buy, km</string>
    <string name="attention_before_change_days">attention before change, days</string>
    <string name="attention_before_change_km">attention before change, km</string>
    <string name="_1000_km">1000 km</string>
    <string name="_15_days">15 days</string>
    <string name="_300_km">300 km</string>
    <string name="_5_days">5 days</string>
    <string name="insurance_period_days">insurance period, days</string>
    <string name="technical_view_period_days">Technical view period, days</string>
    <string name="_365_days">365 days</string>
    <string name="_730_days">730 days</string>
    <string name="searching">searching</string>
    <string name="searching_button">SearchingButton</string>
    <string name="no_result">No result, try another filter</string>
    <string name="_p100_km">+100 km</string>
    <string name="_p1000_km">+1 000 km</string>
    <string name="_p500_km">+500 km</string>
    <string name="ok">OK</string>
    <string name="_10_000km">10000</string>
    <string name="service_part">Service for</string>
    <string name="make">make</string>
    <string name="inspection_only">Inspection only</string>
    <string name="insurance">Insurance</string>
    <string name="create_common_list_of_parts">create common list of parts</string>
    <string name="park_is_counting">park is counting</string>
    <string name="days_between_correcting_odo_days">Days between correcting odo, days</string>
    <string name="check_your_cars">check your cars</string>
    <string name="description_of_repair">description of repair</string>
    <string name="date_repair">Date repair:</string>
    <string name="mileage_km">Mileage(km):</string>
    <string name="cost">Cost($):</string>
    <string name="type">Type:</string>
    <string name="_00_00_2000">00.00.2000</string>
    <string name="date_of_repair_dd_mm_yyyy">date of repair dd.mm.yyyy</string>
    <string name="mileage">mileage</string>
    <string name="input_cost_100">input cost 100</string>
    <string name="change_repair">change/repair</string>
    <string name="limit_day">Limit (day):</string>
    <string name="limit_km">Limit (km):</string>
    <string name="codes">Codes:</string>
    <string name="name">Name:</string>
    <string name="last_service">Last service:</string>
    <string name="loading">Loading</string>
    <string name="refresh">Refresh cars</string>
    <string name="load">load</string>
    <string name="loading_car_be_careful">Load cars from Download/cars.txt</string>
    <string name="saving_car_be_careful">Cars will be save to Download/cars.txt</string>

    <string name="mileage_template">%d km</string>
    <string name="car_item_update_mileage">!%d km</string>
    <string name="car_item_normal_mileage">%d km</string>
    <string name="photo_path">%s.jpg</string>
    <string name="diagnostic_item_description"> -> %s </string>

    <string name="car_creator_message_wrong_brand_model">model or brand can not be empty!!!</string>
    <string name="car_creator_car_created">car is created</string>
    <string name="car_creator_car_updated">car is updated</string>
    <string name="car_creator_image_saved">image is saved</string>
    <string name="car_creator_image_not_saved">image is not saved</string>
    <string name="car_creator_create_new">Create new car</string>
    <string name="car_creator_update_car">Updating %s %s</string>
    <string name="note_creator_message_bad_description">description can not be empty</string>
    <string name="note_creator_create_new">Create new note</string>
    <string name="note_creator_updating_for_car">%s Updating note</string>
    <string name="part_creator_part_created">Part is created</string>
    <string name="part_creator_bad_name">name can not be empty!!!</string>
    <string name="part_creator_template_date">date format must be dd.MM.yyyy - 01.06.2019</string>
    <string name="part_creator_create_new">Create new part</string>
    <string name="part_creator_update">Updating %s</string>
    <string name="repair_creator_bad_data">name or date can not be empty</string>
    <string name="repair_creator_create_new">Create new repair</string>
    <string name="repair_creator_update">Updating repair</string>

    <string name="dialog_car_delete_really">Do you want to delete %s %s</string>
    <string name="dialog_part_delete_really">Do you want to delete %s</string>
    <string name="dialog_part_service_really">Do you want to make service for: %s</string>

    <string name="main_title_out_for_car">My cars, output for %d cars</string>
    <string name="main_title_notes">My notes</string>
    <string name="main_title_to_buy">Have to buy..</string>
    <string name="main_title_to_do">Have to do..</string>

    <string name="common_part_oil_level">Oil level</string>
    <string name="common_part_oil_filter">Oil filter</string>
    <string name="common_part_air_filter">Air filter</string>
    <string name="common_part_cabin_filter">Cabin filter</string>
    <string name="common_part_spark_plugs">spark plugs</string>
    <string name="common_part_front_brake">front brake</string>
    <string name="common_part_rear_brake">rear brake</string>
    <string name="common_part_wipers">wipers</string>
    <string name="common_part_insurance">insurance</string>
    <string name="common_part_techview">techview</string>
</resources>
