<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/settingsDayToBuyText"
        style="@style/Settings"
        android:text="@string/attention_before_buy_days"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsKmToBuyText"
        style="@style/Settings"
        android:text="@string/attention_before_buy_km"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDayToBuyText" />


    <TextView
        android:id="@+id/settingsDayToChangeText"
        style="@style/Settings"
        android:text="@string/attention_before_change_days"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsKmToBuyText" />

    <TextView
        android:id="@+id/settingsKmToChangeText"
        style="@style/Settings"
        android:text="@string/attention_before_change_km"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDayToChangeText" />

    <TextView
        android:id="@+id/settingsInsurancePeriodText"
        style="@style/Settings"
        android:text="@string/insurance_period_days"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsKmToChangeText" />

    <TextView
        android:id="@+id/settingsTechViewPeriodText"
        style="@style/Settings"
        android:text="@string/technical_view_period_days"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsInsurancePeriodText" />

    <TextView
        android:id="@+id/settingsDaysBetweenOdoCorrectingText"
        style="@style/Settings"
        android:text="@string/days_between_correcting_odo_days"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTechViewPeriodText" />

    <!-- input fields-->


    <EditText
        android:id="@+id/settingsDayToBuyValue"
        style="@style/Settings.Value"
        android:hint="@string/_15_days"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/settingsKmToBuyValue"
        style="@style/Settings.Value"
        android:hint="@string/_1000_km"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsDayToBuyValue"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/settingsDayToChangeValue"
        style="@style/Settings.Value"
        android:hint="@string/_5_days"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsKmToBuyValue"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/settingsKmToChangeValue"
        style="@style/Settings.Value"
        android:hint="@string/_300_km"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsDayToChangeValue"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/settingsInsurancePeriodValue"
        style="@style/Settings.Value"
        android:hint="@string/_365_days"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsKmToChangeValue"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/settingsTechViewPeriodValue"
        style="@style/Settings.Value"
        android:hint="@string/_730_days"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsInsurancePeriodValue"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/settingsDaysBetweenOdoCorrectingValue"
        style="@style/Settings.Value"
        android:hint="@string/_15_days"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTechViewPeriodValue"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/settingsButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/settingsDaysBetweenOdoCorrectingText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/settingsLoaderBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/settingsDaysBetweenOdoCorrectingText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/settingsLoaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        android:text="@string/park_is_counting"
        app:layout_constraintTop_toBottomOf="@+id/settingsLoaderBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>