<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/carCreatorProgress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/carCreatorImageOfCar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/carCreatorBrand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/input_brand"
        android:inputType="textCapWords"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/carCreatorPlateNumber"
        app:layout_constraintEnd_toStartOf="@+id/carCreatorModel"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/carCreatorModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/input_model"
        android:inputType="textCapWords"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/carCreatorYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carCreatorBrand" />

    <EditText
        android:id="@+id/carCreatorPlateNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/input_number"
        android:inputType="textCapCharacters"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/carCreatorVincd"
        app:layout_constraintEnd_toStartOf="@+id/carCreatorYear"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/carCreatorVincd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/input_vin_code"
        android:inputType="textCapCharacters"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/carCreatorMileage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/carCreatorYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/input_year_of_made"
        android:inputType="number"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/carCreatorVincd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carCreatorPlateNumber" />

    <EditText
        android:id="@+id/carCreatorMileage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/input_mileage"
        android:inputType="number"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/carCreatorButtonCreate"
        app:layout_constraintEnd_toEndOf="@+id/carCreatorPlateNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/carCreatorButtonCreate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="6dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/carCreatorButtonCancel"
        app:layout_constraintStart_toEndOf="@+id/carCreatorButtonDelete" />

    <Button
        android:id="@+id/carCreatorButtonDelete"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="6dp"
        android:text="@string/delete_car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/carCreatorButtonCreate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/carCreatorButtonCancel"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carCreatorButtonCreate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/carCreatorFABCreatePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/carCreatorImageOfCar"
        app:layout_constraintEnd_toEndOf="@+id/carCreatorImageOfCar"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/carCreatorImageOfCar"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/carCreatorBrand"
        app:srcCompat="@mipmap/ic_launcher_round" />
</androidx.constraintlayout.widget.ConstraintLayout>