<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog">

    <FrameLayout
        android:id="@+id/serviceFragmentHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_title">

        <TextView
            android:id="@+id/serviceTitle"
            style="@style/Dialog.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_part"/>
    </FrameLayout>

    <TextView
        android:id="@+id/serviceFragmentQuestion"
        style="@style/Delete.Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        tools:text="Do you want to make service for:"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/serviceFragmentButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/serviceFragmentButtonMakeService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/info"
            android:textColor="@color/black"
            android:text="@string/make"/>

    </LinearLayout>
</LinearLayout>